Fix some layout issues

--- a/src/styles/footer-style.module.css
+++ b/src/styles/footer-style.module.css
@@ -2,7 +2,6 @@
     padding-top: 10vh;
     font-size: 1rem;
     background: #192036;
-    height: 40vh;
 }
 
 .footer li {
